# proj_inzyn_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_document_type_check_constraint.py  3f4a5b6c7d8e_seed_mvp_validation_profiles.py  8d56f94fed2e_add_processing_stage_and_processing_.py  9a81552f7f7e_add_legal_analysis_result_to_document_.py  add_ocr_scale_to_document_analyses.py  add_suggested_document_type_to_documents.py  add_tesseract_words_to_document_analyses.py  b7c8d9e0f1a2_allow_mvp_document_types.py
app/adapters/: azure_ocr.py  local_ocr.py
app/api/dependencies/: auth.py  pagination.py
app/api/v1/: analyses.py  auth.py  classifications.py  documents.py  redactions.py  reports.py  router.py  users.py  validation_profiles.py
app/core/: config.py  exceptions.py  logging.py  mock_users.py  security.py
app/db/: base.py  session.py
app/enums/: __init__.py  analysis.py  document.py  redaction.py
app/models/: __init__.py  analysis_report.py  base.py  document.py  document_analysis.py  user.py  validation_profile.py  validation_rule.py
app/repositories/: analysis_report.py  base.py  document.py  document_analysis.py  user.py  validation_profile.py
app/schemas/: analysis_report.py  auth.py  classification.py  common.py  document.py  document_analysis.py  user.py  validation_profile.py
app/services/: auth.py  classification.py  document.py  document_analysis.py  formal_validation.py  mvp_validation_profiles.py  redaction.py  redaction_detectors.py  redaction_service.py  report.py  validation.py  validation_profile.py
app/tasks/: analysis.py  azure_ocr.py  celery_app.py  full_ocr.py  legal_analysis.py  local_ocr.py  ocr.py
app/utils/: text_normalize.py
scripts/: generate_synthetic_training_data.py  smoke_test_api.sh  smoke_test_classifier.py  train_classifier.py  validate_commit_msg.py
storage/: mock_users.json
tests/: conftest.py
tests/adapters/: test_azure_ocr.py
tests/api/: test_auth.py  test_classifications.py  test_documents.py  test_redactions.py
tests/services/: test_classification_integration.py  test_classification_service.py  test_document_service.py  test_formal_validation.py  test_redaction_detectors.py  test_redaction_service.py  test_validation.py
tests/tasks/: test_analysis_profile_availability.py  test_legal_analysis_classification.py
