[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "cerber_doc_backend"
version = "0.1.0"
description = "Document completeness analysis backend with OCR"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-core>=1.32.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "pymupdf>=1.24.0",
    "spacy>=3.7.0",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.1",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",

    "types-aiofiles>=24.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "ISC", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "TRY", "RUF"]
ignore = ["TRY003", "TRY301", "RUF012", "COM812", "ISC001", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "ANN", "ARG", "PLR2004", "PLC0415"]
"alembic/**/*.py" = ["ANN", "ERA001", "N999"]
"app/models/*.py" = ["F821"]
"app/db/base.py" = ["F821"]
"app/tasks/*.py" = ["PLC0415"]
"app/core/config.py" = ["S105"]
"app/adapters/azure_ocr.py" = ["PLR0912", "ANN401"]
"app/adapters/local_ocr.py" = ["ANN401"]
"app/services/redaction_detectors.py" = ["PLR0912", "PLR2004", "E501"]
"app/api/**/*.py" = ["ARG001"]
"app/repositories/base.py" = ["UP046"]
"app/schemas/common.py" = ["UP046"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Alembic
[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

# pydantic-settings
[[tool.mypy.overrides]]
module = "app.core.config"
disallow_subclassing_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]
